# BioReactorDesign

./: .buildinfo  .codespellrc  .gitignore  LICENSE  README.md  acknowledgments.html  airlift.html  bird.calibration.html  bird.html  bird.meshing.html  bird.postprocess.html  bird.preprocess.data_case_gen.html  bird.preprocess.dynamic_mixer.html  bird.preprocess.html  bird.preprocess.json_gen.html  bird.preprocess.species_gen.html  bird.preprocess.stl_patch.html  bird.utilities.html  bubbleColumn.html  calibration_bsd.html  calibration_normal_beta.html  contribute.html  dist.sh  fixFormat.sh  genindex.html  index.html  loopReactor.html  main.py  meshing.html  modules.html  objects.inv  postprocess.html  preprocess.html  py-modindex.html  pyproject.toml  pythonInterface_tut.html  python_interface.html  python_interface_tut.html  quickstart.html  references.html  (+10 more)
_sources/: acknowledgments.rst.txt  bird.calibration.rst.txt  bird.postprocess.rst.txt  bird.preprocess.data_case_gen.rst.txt  bird.preprocess.species_gen.rst.txt  bird.preprocess.stl_patch.rst.txt  bird.rst.txt  bird.utilities.rst.txt  bubbleColumn.rst.txt  calibration_bsd.rst.txt  contribute.rst.txt  index.rst.txt  loopReactor.rst.txt  meshing.rst.txt  postprocess.rst.txt  preprocess.rst.txt  quickstart.rst.txt  side_sparger.rst.txt  troubleshoot.rst.txt  tutorials.rst.txt  uq.rst.txt
applications/: compute_conditional_mean.py  compute_conditional_mean_will.py  compute_kla_uq.py  compute_time_series_mean.py  convert_dim.py  early_prediction.py  read_history.py  sparger_placement_opt.py  writeBlockMesh.py  write_block_cyl_mesh.py  write_block_rect_mesh.py  write_dynMix_fvModels.py  write_species_thermo_prop.py  write_stir_tank_mesh.py  write_stirred_tank_mesh.py  write_stl_mesh.py  write_stl_patch.py
bird/: __init__.py  logging_config.py  requirements.txt  version.py
blockCyclindricalMeshing/: README.md  mesh.sh  sparger_optim.py  sparger_single.py  writeBlockMesh.py
blockMeshDesign/: allrun.sh  mesh.sh
brd/: __init__.py  version.py
(+1973 files in other folders)
