[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrel-bird"
version = "0.0.16"
description = "Bio Reactor Design (BiRD): a toolbox to simulate and analyze different designs of bioreactors in OpenFOAM"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Malik Hassanaly", email = "malik.hassanaly@nrel.gov"},
  {name = "Federico Municchi", email = "federico.municchi@nrel.gov"},
  {name = "Hariswaran Sitaraman", email = "hariswaran.sitaraman@nrel.gov"},
  {name = "Mohammad Rahimi", email = "mohammad.rahimi@nrel.gov"},
]
license = {text = "BSD-3-Clause"}
requires-python = ">= 3.9"
classifiers=[
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "prettyPlot",
    "ruamel_yaml",
    "numpy-stl",
    "scipy",
]


[project.optional-dependencies]
post = [
    "corner",
    "jax",
    "numpyro>=0.16.1"
]
format = [
    "black",
    "isort",
    "codespell"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme"
]
test = [
    "pytest"
]
all = [
    "corner",
    "jax",
    "numpyro>=0.16.1",
    "black",
    "isort",
    "codespell",
    "sphinx",
    "sphinx_rtd_theme",
    "pytest",
]


[project.urls]
homepage = "https://github.com/NREL/BioReactorDesign"
documentation = "https://nrel.github.io/BioReactorDesign/"
repository = "https://github.com/NREL/BioReactorDesign"

[tool.setuptools]
packages = ["bird", "bird.meshing", "bird.preprocess", "bird.postprocess", "bird.calibration", "bird.utilities"]
include-package-data = true

[tool.setuptools.package-data]
bird = [
    "*.json",
    "*.yaml",
    "*.csv",
    "data_conditional_mean",
]

